--- a/Frontend/MS_AU_Fronted/src/app/search/search.component.css
+++ b/Frontend/MS_AU_Fronted/src/app/search/search.component.css
@@ -2,6 +2,12 @@
   margin: 0px 10px 10px 10px;
 }
 
+.operation-cell
+{
+  margin: 5px 5px 5px 5px;
+  /* font-weight: bold; */
+}
+
 .mat-header-cell{
 font-weight: bold;
 font-size: medium;
@@ -55,9 +61,9 @@ mat-footer-row mat-footer-cell{
   justify-content: left;
 }
 
-button{
+/* button{
   margin-left: 3px;
-}
+} */
 
 .welcome-text{
   align-items: center;
